Add collection of objects scraping

--- a/src/test/resources/test.html
+++ b/src/test/resources/test.html
@@ -18,8 +18,19 @@
     <a href="href3">Href 3</a>
     <a href="href4">Href 4</a>
 </div>
-<div class="some-class">Div with some class 1</div>
-<div class="some-class">Div with some class 2</div>
-<div class="some-class">Div with some class 3</div>
+<div>
+    <div class="some-class">
+        <p>Div with some class 1</p>
+        <div>1</div>
+    </div>
+    <div class="some-class">
+        <p>Div with some class 2</p>
+        <div>2</div>
+    </div>
+    <div class="some-class">
+        <p>Div with some class 3</p>
+        <div>3</div>
+    </div>
+</div>
 </body>
 </html>
