--- a/src/test/resources/test.html
+++ b/src/test/resources/test.html
@@ -12,7 +12,7 @@
     <p>3</p>
     <p>4</p>
 </div>
-<div>
+<div id="links">
     <a href="href1">Href 1</a>
     <a href="href2">Href 2</a>
     <a href="href3">Href 3</a>
